# BreathLibraryCore

./: .gitignore  BreathLibraryCore.sln  BreathLibraryCore.vcxproj  BreathLibraryCore.vcxproj.filters  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint  makeall.bat
src/: BreathLibraryCore.cpp  BreathLibraryCore.hpp
src/correlators/: RangeCorrelator.cpp  RangeCorrelator.hpp  SampleCorrelator.cpp  SampleCorrelator.hpp  SyncedPatternCorrelator.cpp  SyncedPatternCorrelator.hpp
src/debugging/: DebugCallbacks.cpp  DebugCallbacks.hpp
src/definitions/: ErrorCodes.hpp  IntTypes.hpp  PlatformDefinitions.hpp
src/detectors/: ManagedObject.cpp  ManagedObject.hpp  ManagedSampler.cpp  ManagedSampler.hpp  MergeSampler.cpp  MergeSampler.hpp  PatternSampler.cpp  PatternSampler.hpp  SimpleAudioSampler.cpp  SimpleAudioSampler.hpp  TMAudioSampler.cpp  TMAudioSampler.hpp  TestingDetector.cpp  TestingDetector.hpp
src/editor/: ClassDefinitions.cpp  ClassDefinitions.hpp  EnumDefinitions.cpp  EnumDefinitions.hpp
src/rapidjson/: document.h  reader.h
src/serialization/: ClassDefinitions.cpp  ClassDefinitions.hpp  EnumDefinitions.cpp  EnumDefinitions.hpp  ReferenceManager.cpp  ReferenceManager.hpp  Serializable.cpp  Serializable.hpp  SerializedTypes.cpp  SerializedTypes.hpp
src/types/: Behaviour.cpp  Behaviour.hpp  BreathSample.cpp  BreathSample.hpp  BreathStream.cpp  BreathStream.hpp  DataStreamMeta.hpp  Keyframe.cpp  Keyframe.hpp  Pattern.cpp  Pattern.hpp  SimpleInterfaces.hpp
src/util/: Base64.cpp  Base64.hpp  Timer.cpp  Timer.hpp  interpolators.cpp  interpolators.hpp
